# Px4_CoSim

./: .gitignore  README.md
.cache/clangd/index/: FOV_Checker.cpp.E1B3B7F52460D809.idx  FOV_Checker.h.F3E097573C140285.idx  SO3Control.cpp.19418D9EAF0B5647.idx  SO3Control.hpp.3A072A38651FDBC3.idx  _fixes.hpp.E63391DADFCC9D68.idx  _vectorize.hpp.B842C3C96DDD57F2.idx  comm_types.h.F50BA10EDC915190.idx  command_state.hpp.BEEBD1CD5CC3BCA0.idx  common.h.98D57450453253A1.idx  common.hpp.CE716BD4E5F8F689.idx  compute_common.hpp.4C2D9C95386412C9.idx  compute_vector_relational.hpp.C024DC8E2F7E0D53.idx  constants.hpp.9F0C7EAD9486B64E.idx  constants.inl.3E07F88C31C9DDD1.idx  control_example.cpp.9033A8EAA933B71A.idx  decode_msgs.cpp.6822A38C9EB1D698.idx  decode_msgs.h.A0AA845A7BD5BF78.idx  encode_msgs.cpp.5EFF50CC383A5FA5.idx  encode_msgs.h.E9940279091DC976.idx  epsilon.hpp.98BB35201C81B2BB.idx  epsilon.inl.B8F4ECD6E15F55BF.idx  exponential.h.D135B1CD2467E868.idx  exponential.hpp.FECA8442AB6B9945.idx  frame_transforms.cpp.4B9A6E1BF75A08B5.idx  frame_transforms.h.F6B739AE3EB15792.idx  func_common.inl.2281C315115CE12B.idx  func_common_simd.inl.D64741E184E01547.idx  func_exponential.inl.9F9CF40C24B48687.idx  func_exponential_simd.inl.208B8F92B2DC8B1B.idx  func_geometric.inl.2DB77A9BAB57674F.idx  func_geometric_simd.inl.B5D5533372934286.idx  func_integer.inl.8D6AF7D26140B2EF.idx  func_integer_simd.inl.41353FA0056A95E7.idx  func_matrix.inl.F87E9AED3F3F9F6D.idx  func_matrix_simd.inl.BEF23860ABBD784A.idx  func_packing.inl.BD5427D17CA47E82.idx  func_packing_simd.inl.D4F0844FC6A111AA.idx  func_trigonometric.inl.E363263F14DB74D0.idx  func_trigonometric_simd.inl.F454B5F47CFBD98B.idx  func_vector_relational.inl.9C068F24DFBE52B8.idx  (+198 more)
src/Controler/so3_control/: CMakeLists.txt  package.xml
src/Controler/so3_control/config/: gz_x500_config.yaml  sunray150_mid360_config.yaml
src/Controler/so3_control/src/: SO3Control.cpp  control_example.cpp  so3_control_component.cpp
src/MARSIM/: README.md
src/MARSIM/local_sensing/: CMakeLists.txt  package.xml
src/MARSIM/local_sensing/include/: opengl_sim.hpp
src/MARSIM/local_sensing/src/: opengl_render_node.cpp
src/MARSIM/map_generator/: CMakeLists.txt  package.xml
src/MARSIM/map_generator/src/: map_publisher.cpp
src/MARSIM/test_interface/: CMakeLists.txt  package.xml
src/MARSIM/test_interface/config/: px4.rviz  traj.rviz  traj_simple.rviz
src/MARSIM/test_interface/launch/: marsim_rviz.launch.py  single_px4drone_simple.launch.py
src/MARSIM/test_interface/src/: test_interface_node.cpp
src/Planner/ego_planner/plan_env/src/: grid_map.cpp
src/Planner/ego_planner/plan_manage/: CMakeLists.txt  package.xml
src/Planner/ego_planner/plan_manage/launch/: advanced_param.launch.py  px4_marsim_lidar_min.launch.py
src/Planner/ego_planner/plan_manage/src/: traj_server.cpp
src/Planner/ego_planner/traj_utils/include/traj_utils/: planning_visualization.h
src/Planner/ego_planner/traj_utils/src/: planning_visualization.cpp
src/Utils/cmake_utils/: CMakeLists.txt
src/Utils/mars_quadrotor_msgs/: CMakeLists.txt  package.xml
src/Utils/mars_quadrotor_msgs/msg/: Bspline.msg  EsdfMap.msg  MincoTrajectory.msg  MpcPositionCommand.msg  OaManagerDebug.msg  OptimalTimeAllocator.msg  PolynomialTrajectory.msg  PositionCommand.msg  ReplanCheck.msg  SpatialTemporalTrajectory.msg
src/Utils/mars_quadrotor_msgs/src/: decode_msgs.cpp  encode_msgs.cpp
src/Utils/odom_visualization/: CMakeLists.txt  package.xml
src/Utils/odom_visualization/src/: odom_visualization.cpp
src/Utils/pose_utils/: CMakeLists.txt  package.xml
src/Utils/uav_utils/: CMakeLists.txt  package.xml
src/px4_msgs/msg/: BatteryStatus.msg
src/uav_control/: CMakeLists.txt  package.xml
src/uav_control/config/: control_terminal_config.yaml  trajectory_circle_example.yaml
src/uav_control/get_uav_state/: sub_all_px4_msgs.cpp
src/uav_control/include/: math_utils.h  ros_msg_utils.h  sunray_logger.h
src/uav_control/include/uav_control/: command_state.hpp  frame_transforms.h  poly_solver.hpp  tarj_generator.hpp
src/uav_control/launch/: simulator_example.launch.py  uav_control_terminal.launch.py
src/uav_control/rviz/: px4_viz.rviz
src/uav_control/src/: lio_to_px4.cpp  mocap_to_px4.cpp  poly_solver.cpp  poly_tarj_publish_demo.cpp  px4_msg_bridge.cpp  px4_msg_listener.cpp  px4_so3_example.cpp  send_px4_pos_cmd.cpp  uav_control_terminal.cpp
src/uav_control/src/lib/: frame_transforms.cpp  tarj_generator.cpp
