<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uav_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fatmoonqyp@126.com">sysu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <depend>px4_msgs</depend>
  <depend>eigen</depend>
  <depend>ros_environment</depend>
  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>launch</depend>
  <depend>launch_testing</depend>
  <depend>launch_testing_ros</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>ros2launch</depend>
  <depend>visualization_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ament_index_cpp</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
