<?xml version="1.0"?>
<package format="3">
  <name>local_sensing_node</name>
  <version>0.1.0</version>
  <description>The local_sensing package</description>
  <author>Fanze Kong</author>
  <maintainer email="jackykongfz@gmail.com">Fanze Kong</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>OpenCV</depend>
  <depend>PCL</depend>
  <depend>glfw3</depend>
  <depend>glew</depend>
  <depend>OpenGL</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
