<?xml version="1.0"?>
<package format="3">
  <name>odom_visualization</name>
  <version>0.0.0</version>
  <description>odom_visualization</description>
  <maintainer email="eeshaojie@todo.todo">Shaojie Shen</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/odom_visualization</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pose_utils</depend>
  <depend>quadrotor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


