<?xml version="1.0"?>
<package format="3">
  <name>pose_utils</name>
  <version>0.0.0</version>
  <description>pose_utils</description>
  <maintainer email="eeshaojie@todo.todo">Shaojie Shen</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>eigen3_cmake_module</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
