<?xml version="1.0"?>
<package format="3">
  <name>uav_utils</name>
  <version>0.0.0</version>
  <description>The uav_utils package</description>

  <maintainer email="liutianbocn@gmail.com">LIU Tianbo</maintainer>
  <license>LGPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>eigen3_cmake_module</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
